# budgie-daemon-v2

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  Taskfile.yml  display-config.toml
.github/: README.md
cmake/: ECMFindModuleHelpersStub.cmake
src/: CMakeLists.txt  main.cpp
src/config/: display.cpp  display.hpp  format.hpp  utils.cpp  utils.hpp
src/data/: org.buddiesofbudgie.BudgieDaemonV2.desktop.in  org.buddiesofbudgie.BudgieDaemonV2.service.in
src/data/labwc/: autostart
src/dbus/: BatchSystemAdaptorGen.cpp  BatchSystemAdaptorGen.h  BatchSystemService.cpp  BatchSystemService.hpp  DisplayAdaptorGen.cpp  DisplayAdaptorGen.h  DisplayObjectManager.cpp  DisplayObjectManager.hpp  DisplaySchema.OutputMode.xml  DisplaySchema.xml  DisplaySchemaTypes.hpp  DisplayService.cpp  DisplayService.hpp  OutputAdaptorGen.cpp  OutputAdaptorGen.h  OutputModeAdaptorGen.cpp  OutputModeAdaptorGen.h  OutputModeService.cpp  OutputModeService.hpp  OutputService.cpp  OutputService.hpp  daemon-client.h  daemon-client.hpp  daemon-server.h  daemon-server.hpp  org.buddiesofbudgie.BudgieDaemon.conf  org.buddiesofbudgie.BudgieDaemonX.conf  schema.xml  server.cpp  server.hpp
src/dbus/schemas/: DisplaySchema.BatchSystem.xml  DisplaySchema.Displays.xml  DisplaySchema.Output.xml  DisplaySchema.OutputMode.xml
src/displays/: configuration.cpp  configuration.hpp
src/displays/batch-system/: CalculationResult.cpp  CalculationResult.hpp  ConfigurationAction.cpp  ConfigurationAction.hpp  ConfigurationBatchSystem.cpp  ConfigurationBatchSystem.hpp  ConfigurationCalculation.cpp  DisplayConfigurationBatch.cpp  DisplayConfigurationBatchAction.cpp  DisplayConfigurationBatchSystem.cpp  DisplayConfigurationBatchSystem.hpp  OutputTargetState.cpp  OutputTargetState.hpp  enums.hpp
src/displays/output-manager/: WaylandOutputManager.cpp  WaylandOutputManager.hpp
src/displays/output-manager/head/: WaylandOutputHead.cpp  WaylandOutputHead.hpp  WaylandOutputMetaHead.cpp  WaylandOutputMetaHead.hpp  enums.hpp
src/displays/output-manager/mode/: WaylandOutputMetaMode.cpp  WaylandOutputMetaMode.hpp  WaylandOutputMode.cpp  WaylandOutputMode.hpp  enums.hpp
src/includes/: toml.hpp
src/sys/: SysInfo.cpp  SysInfo.hpp
